fixing project UI going out of bound

--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -70,7 +70,7 @@ const tech = Object.values(TAGS);
     >
       <h1 class="flex justify-center p-5">{name}</h1>
       <ProjectHero img={img} alt={alt} />
-      <article class="prose prose-md px-5 my-4 w-max">
+      <article class="prose prose-md px-5 my-4 w-full">
         <Content />
         <ul class="list-none flex flex-row gap-3 p-0">
           {
