--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -12,6 +12,7 @@ import Spotify from "../../icons/Spotify.astro";
 import AstroIcon from "../../icons/AstroIcon.astro";
 import Cloudinary from "../../icons/Cloudinary.astro";
 import SectionContainer from "../../components/SectionContainer.astro";
+import GitHub from "../../icons/GitHub.astro";
 
 export async function getStaticPaths() {
   const projects = await getCollection("projects");
@@ -24,9 +25,10 @@ export async function getStaticPaths() {
 
 const { project } = Astro.props;
 const { data } = project;
-const { name, img, alt, technologies } = data;
+const { name, img, alt, technologies, github_repo, source} = data;
 
 const { Content } = await render(project);
+
 
 const TAGS = {
   Expo: {
@@ -70,8 +72,34 @@ const tech = Object.values(TAGS);
     >
       <h1 class="flex justify-center p-5">{name}</h1>
       <ProjectHero img={img} alt={alt} />
-      <article class="prose prose-md px-5 my-4 w-full">
+      
+      <article class="prose prose-md px-5 my-4 w-full"><h2>
+        Links
+      </h2>
+     <div class="flex flex-row gap-3 -mx-1">
+
+      { github_repo && (
+      <SocialPill class="bg-sky-200" href=`${github_repo}`>
+        <GitHub class="size-5"/>
+        Github Repo
+      </SocialPill>
+
+      )}
+      {
+        source && (
+          <SocialPill class="bg-emerald-100" href=`${source}` >
+            Production Link
+          </SocialPill>
+        )
+      }      
+      </div> 
+      <h2>
+        Description
+      </h2>
         <Content />
+        <h2>
+          Technologies
+        </h2>
         <ul class="list-none flex flex-row gap-3 p-0">
           {
             tech.map((tag) => {
