added padding to career section for navigation

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,4 +2,6 @@
 import SectionContainer from "./SectionContainer.astro";
 ---
 
-<SectionContainer id="" class="h-8" />
+<SectionContainer id="" class="h-8">
+
+</SectionContainer>
