--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import LinkedIn from "../icons/LinkedIn.astro";
   <h1 style="color: #ff6d7f" class="md:text-5xl text-5xl font-bold">
     Roberto Wong
   </h1>
-  <h1 class="md:text-5xl text-5xl font-bold">I build solutions.</h1>
+<h1 class="md:text-5xl text-5xl font-bold">Developer and IT</h1>
   <nav class="flex flex-row gap-x-4 pt-3">
     <SocialPill href="https://github.com/tycowong"
       ><GitHub class="size-6" />GitHub</SocialPill
