--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import DocumentIcon from "../icons/DocumentIcon.astro";
 
     <SectionContainer
       id="career"
-      class="flex-col justify-start gap-y-10 p-5 sm:p-0"
+        class="flex-col gap-y-10 md:px-0 md:pt-10 "
     >
       <div class="flex flex-row gap-x-3 justify-between items-center">
         <div class="flex flex-row items-center justify-start gap-x-3">
@@ -49,7 +49,7 @@ import DocumentIcon from "../icons/DocumentIcon.astro";
 
     <SectionContainer
       id="projects"
-      class="flex justify-center flex-col items-center max-w-max"
+      class="flex justify-center flex-col items-center md:px-0"
     >
       <Projects />
     </SectionContainer>
