added About Me Section

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import Cottage from "../icons/Cottage.astro";
     <a href="/"> <Cottage class="w-5" /></a>
     <a href="#career">Career</a>
     <a href="#projects">Projects</a>
-    <a href="#about">About Me</a>
+    <a href="#aboutme">About Me</a>
     <a href="mailto:roberto.wong.lozano@gmail.com">Contact Me</a>
   </nav>
 </header>
