--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 import SectionContainer from "./SectionContainer.astro";
 ---
 
-<SectionContainer id="" class="h-8">
+<SectionContainer id="">
 
 </SectionContainer>
