--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -70,6 +70,10 @@ const { description, title } = Astro.props;
     font-size: 16px;
   }
 
+  strong {
+    color: orangered;
+  }
+
   @media (prefers-reduced-motion: reduce) {
     html {
       scroll-behavior: auto;
