added new Project and icon

--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -7,6 +7,7 @@ import Expo from "../../icons/Expo.astro";
 import TailWind from "../../icons/TailWind.astro";
 import SocialPill from "../../icons/SocialPill.astro";
 import HTML from "../../icons/HTML.astro";
+import Starlight from "../../icons/Starlight.astro";
 import CSS from "../../icons/CSS.astro";
 import Spotify from "../../icons/Spotify.astro";
 import AstroIcon from "../../icons/AstroIcon.astro";
@@ -59,6 +60,9 @@ const TAGS = {
     name: "Cloudinary",
     icon: Cloudinary,
   },
+  Starlight: {
+    name: "Starlight",
+    icon: Starlight,}
 };
 
 const tech = Object.values(TAGS);
